syntax = "proto3";

package notification;

service NotificationService {
  // 알림 전송 메서드
  rpc SendNotification (NotificationRequest) returns (NotificationResponse);
}

// 알림 요청 메시지
message NotificationRequest {
  string fcm_token = 1;
  string title = 2;
  string body = 3;
  map<string, string> data = 4;
}


// 알림 응답 메시지
message NotificationResponse {
  bool success = 1;
  string message = 2;
  string timestamp = 3;
} 